# llm-fallback-router

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_fallback_router/: __init__.py
tests/: test_router.py
